--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -5,7 +5,7 @@
         <title>ISO 3103</title> 
     </head>           
         <body>
-            <h1>ISO 3103</h1>
+            <h1><strong>ISO 3103</strong></h1>
 
 <p>The content of this page has been slightly adapted from the Wikipedia page on <a href="//en.wikipedia.org/wiki/ISO_3103">ISO 3103</a></p>
 
@@ -43,9 +43,9 @@ To maintain consistent results, the following are recommendations given by the s
 The pot should be white porcelain or glazed earthenware and have a partly serrated edge. It should have a lid that fits loosely inside the pot.
 
 The pot can be large or small, with a prescribed volume and weight.
-<table> <tr><th>Pot</th>   <th>Volume</th>   <th>Weight</th></tr>
-    <tr><th>large </th>  <td>310 ml (±8 ml)</td>    <td>200 g</td> (±10 g)</tr>
-    <tr><th> small </th>  <td>350 ml (±4 ml)</td>    <td>118 g</td> (±10 g)</tr> </table>
+<table> <tr><th><td>Pot</td></th>   <th><td>Volume</td></th>   <th><td>Weight</td></th></tr>
+    <tr><th><td>large</td> </th>  <td>310 ml (±8 ml)</td>    <td>200 g</td> (±10 g)</tr>
+    <tr><th> <td>small</td> </th>  <td>350 ml (±4 ml)</td>    <td>118 g</td> (±10 g)</tr> </table>
 2 grams of tea (measured to ±2% accuracy) per 100 ml boiling water is placed into the pot.
 
 Freshly boiling water is poured into the pot to within 4-6 mm of the brim. Allow 20 seconds for water to cool.
