--- a/04-css/css/dokument.html
+++ b/04-css/css/dokument.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>HTCPCP</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="oblikovanje.css">
+        <link rel="stylesheet" href="04-css/normalize.css">
+        <link rel="stylesheet" href="04-css/oblikovanje.css">
+    
 </head>
 
 <body>
-    <section>
+    <section id="uvod">
+    
         <h1>Hyper Text Coffee Pot Control Protocol</h1>
 
         <p>The content of this page has been slightly adapted from the Wikipedia page on <a
